[package]
name = "md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kdtree = "0.7.0"
phf = {version = "0.11.1",features = ["macros"]}
rayon = "1.7.0"
rand = "0.8.5"
rand_distr = "0.4.3"
ndarray = {version="0.15.6",features=["rayon"]}
bevy_panorbit_camera = "0.3.0"
csv = "1.2.1"
bevy = "0.10.1"
regex = "1.8.1"
crossbeam = "0.8.2"
num_cpus = "1.15.0"
itertools = "0.10.5"
kiddo = "2.0.1"

[profile.release]
lto = true